--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <header class="container-fluid m-0 p-0">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg  glass-navbar">
             <div class="container-fluid">
                 <a class="navbar-brand" href="{% url 'home' %}">Create Nova</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,28 +27,28 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="{% url 'home' %}">Home</a>
+                            <a class="nav-link text-light disabled" aria-current="page" href="{% url 'home' %}">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'business_services' %}">Business Services</a>
+                            <a class="nav-link text-light" href="{% url 'business_services' %}">Business Services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'creator_services' %}">Creator Services</a>
+                            <a class="nav-link text-light" href="{% url 'creator_services' %}">Creator Services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'portfolios' %}">Portfolio</a>
+                            <a class="nav-link text-light" href="{% url 'portfolios' %}">Portfolio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'user_list' %}">User Management</a>
+                            <a class="nav-link text-light " href="{% url 'user_list' %}">User Management</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'gallery' %}">Gallery</a>
+                            <a class="nav-link text-light " href="{% url 'gallery' %}">Gallery</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'contact' %}">Contact</a>
+                            <a class="nav-link text-light " href="{% url 'contact' %}">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'testimonials' %}">Testimonials</a>
+                            <a class="nav-link text-light " href="{% url 'testimonials' %}">Testimonials</a>
                         </li>
                     </ul>
                 </div>
