--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -20,7 +20,7 @@
     <header class="container-fluid m-0 p-0">
         <nav class="navbar navbar-expand-lg  glass-navbar">
             <div class="container-fluid">
-                <a class="navbar-brand" href="{% url 'home' %}">Create Nova</a>
+                <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'images/logo.svg' %}" alt="SVG image description"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
