--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -20,11 +20,14 @@
     <header class="container-fluid m-0 p-0">
         <nav class="navbar navbar-expand-lg  glass-navbar">
             <div class="container-fluid">
-                <a class="navbar-brand" href="{% url 'home' %}">    <div class="brand-container my-1">
+                <a class="navbar-brand" href="{% url 'home' %}">     
+                 <div class="brand-container my-1">
                     <h1 class="brand-name m-0">
-                      <span class="brand-create">Create</span><span class="brand-nova">Nova</span>
+                        <span class="brand-create">Create</span>
+                        <span class="brand-nova">Nova</span>
                     </h1>
-                  </div> </a> 
+                </div>
+             </a> 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
