--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -17,11 +17,11 @@
 
 </head>
 <body>
-    <header class="container-fluid m-0 p-0">
-        <nav class="navbar navbar-expand-lg  glass-navbar">
-            <div class="container-fluid">
+    <header class="container-fluid m-0 p-0 w-100 d-flex justify-content-center align-items-center">
+        <nav class="navbar navbar-expand-lg w-100   glass-navbar">
+            <div class="container-fluid  d-flex justify-content-between align-items-center ">
                 <a class="navbar-brand" href="{% url 'home' %}">     
-                 <div class="brand-container my-1">
+                 <div class="brand-container d-flex justify-content-space-between my-1">
                     <h1 class="brand-name m-0">
                         <span class="brand-create">Create</span>
                         <span class="brand-nova">Nova</span>
@@ -29,7 +29,7 @@
                 </div>
              </a> 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon text-light"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
