Add service divs to home page

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -72,6 +72,34 @@
         </div>
     </main>
 
+    <section id="below-hero">
+        <div class="container my-5">
+          <div class="row">
+            <div class="col-10 col-md-8 col-lg-6">
+              <div class="home-content text-center row d-flex justify-content-center align-items-center ">
+                
+                <h2 class="content-title col-12">Elevate Your Brand with Create Nova</h2>
+                <p class="content-description col-12 ">Join the ranks of the digitally elite with our comprehensive marketing and development services.</p>
+                <a href="#" class=" btn btn-primary btn-3d col-4">Discover More</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="website-services">
+        <div class="container my-5">
+          <div class="row justify-content-end">
+            <div class="col-10 col-md-8 col-lg-6">
+              <div class="service-content text-center row d-flex justify-content-center align-items-center ">
+                <h2 class="service-title col-12">Website Design & Improvement</h2>
+                <p class="service-description col-12 ">Craft the perfect online presence with custom designs and enhancements tailored to your brand.</p>
+                <a href="#" class="btn btn-3d-service col-4">Learn More</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
