Correct lotti animations for small screen sizes

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -88,7 +88,7 @@
                     <div id="lottie-animation1"></div>
                 </div>
                 <div class="d-lg-none col-10">
-                    <div id="lottie-animation1-small"></div>
+                    <div id="lottie-animation1"></div>
                 </div>
           </div>
         </div>
@@ -107,7 +107,7 @@
               </div>
             </div>
             <div class="d-lg-none col-10">
-                <div id="lottie-animation2-small"></div>
+                <div id="lottie-animation2"></div>
             </div>
           </div>
         </div>
