--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -62,6 +62,7 @@
             </div>
         </nav>
     </header>
+    
 
     <!-- Main Content Area -->
     <main class="mt-4">
@@ -87,7 +88,7 @@
                 <div class="d-none d-lg-flex justify-content-between col-lg-6">
                     <div id="lottie-animation1"></div>
                 </div>
-                <div class="d-lg-none col-10">
+                <div class=" d-flex d-lg-none col-10">
                     <div id="lottie-animation1"></div>
                 </div>
           </div>
@@ -106,7 +107,7 @@
                 <a href="#" class="btn btn-3d-service col-4">Learn More</a>
               </div>
             </div>
-            <div class="d-lg-none col-10">
+            <div class="d-flex d-lg-none col-10">
                 <div id="lottie-animation2"></div>
             </div>
           </div>
