Add header and base.html

--- a/home/templates/home/register_content_creator.html
+++ b/home/templates/home/register_content_creator.html
@@ -1,4 +1,6 @@
-{% extends 'base.html' %}
+{% extends 'home/base.html' %}
+{% load static %}
+
 {% block content %}
 <h2>Register as Content Creator</h2>
 <form method="post">
