--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -1,42 +1,83 @@
 {% load static %}
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Meta Tags, Bootstrap CSS, and Custom CSS -->
     {% block head %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Nova - Digital Marketing & Web Development</title>
-    <meta name="description" content="Create Nova, your digital marketing and web development partner...">
-    <meta name="keywords" content="Create Nova, Digital Marketing, Web Development...">
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'css/base_style.css' %}">
+    <meta name="description" content="Create Nova, your digital marketing and web development partner in Indonesia, offers services in web design, SEO, content creation, and online advertising.">
+    <meta name="keywords" content="Create Nova, Digital Marketing, Web Development, Indonesia, Web Design, SEO, Content Creation, Online Advertising, E-commerce, Branding, Social Media Marketing, Mobile App Development, Creative Design, User Experience, Analytics, Digital Strategy, Conversion Optimization, Website Maintenance">
+    
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     {% endblock %}
 </head>
 <body>
+    {% block navbar %}
     <header class="container-fluid m-0 p-0 w-100 d-flex justify-content-center align-items-center">
-        <!-- Navigation Bar -->
-        {% block navbar %}
-        <nav class="navbar navbar-expand-lg w-100 glass-navbar">
-            <!-- Rest of the navbar content -->
-            <!-- New links for signup and login -->
-            <a class="nav-link text-light" href="{% url 'register_content_creator' %}">Sign Up as Content Creator</a>
-            <a class="nav-link text-light" href="{% url 'register_staff' %}">Sign Up as Staff</a>
-            <a class="nav-link text-light" href="{% url 'login' %}">Login</a>
+        <nav class="navbar navbar-expand-lg w-100   glass-navbar">
+            <div class="container-fluid  d-flex justify-content-between align-items-center ">
+                <a class="navbar-brand" href="{% url 'home' %}">     
+                 <div class="brand-container d-flex justify-content-space-between my-1">
+                    <h1 class="brand-name m-0">
+                        <span class="brand-create">Create</span>
+                        <span class="brand-nova">Nova</span>
+                    </h1>
+                </div>
+             </a> 
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon text-light"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link text-light disabled" aria-current="page" href="{% url 'home' %}">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" href="{% url 'business_services' %}">Business Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" href="{% url 'creator_services' %}">Creator Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" href="{% url 'portfolios' %}">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light " href="{% url 'user_list' %}">User Management</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light " href="{% url 'gallery' %}">Gallery</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light " href="{% url 'contact' %}">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light " href="{% url 'testimonials' %}">Testimonials</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light " href="{% url 'register_content_creator' %}">Sign Up  Creator</a>
+                        </li>
+                                                <li class="nav-item">
+                            <a class="nav-link text-light " href="{% url 'register_staff' %}">Sign Up Staff</a>
+                        </li>
+                        <li>
+                            <a class="nav-link text-light" href="{% url 'login' %}">Login</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
-        {% endblock %}
     </header>
+    {% endblock %}
 
-    <main class="mt-4">
-        <div class="container">
             {% block content %}
             <!-- Main content will be here -->
             {% endblock %}
-        </div>
-    </main>
+
 
     <!-- Footer -->
     {% block footer %}
