--- a/home/templates/home/register_staff.html
+++ b/home/templates/home/register_staff.html
@@ -1,4 +1,6 @@
-{% extends 'base.html' %}
+{% extends 'home/base.html' %}
+{% load static %}
+
 {% block content %}
 <h2>Register as Staff</h2>
 <form method="post">
