--- a/services/templates/services/business_services.html
+++ b/services/templates/services/business_services.html
@@ -1,18 +1,9 @@
+{% extends 'home/base.html' %}
 {% load static %}
+
 {% block content %}
-<!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Nova - Digital Marketing & Web Development</title>
-    <meta name="description" content="Create Nova, your digital marketing and web development partner in Indonesia, offers services in web design, SEO, content creation, and online advertising.">
-    <meta name="keywords" content="Create Nova, Digital Marketing, Web Development, Indonesia, Web Design, SEO, Content Creation, Online Advertising, E-commerce, Branding, Social Media Marketing, Mobile App Development, Creative Design, User Experience, Analytics, Digital Strategy, Conversion Optimization, Website Maintenance">
-    
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    
-    <!-- Custom CSS -->
+
     <link rel="stylesheet" href="{% static 'css/businessservice.css' %}">
 
 </head>
