--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -35,7 +35,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link text-light disabled" aria-current="page" href="{% url 'home' %}">Home</a>
+                            <a class="nav-link text-light " aria-current="page" href="{% url 'home' %}">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-light" href="{% url 'business_services' %}">Business Services</a>
