--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -19,69 +19,79 @@
 <body>
     {% block navbar %}
     <header class="container-fluid m-0 p-0 w-100 d-flex justify-content-center align-items-center">
-        <nav class="navbar navbar-expand-lg w-100   glass-navbar">
-            <div class="container-fluid  d-flex justify-content-between align-items-center ">
+        <nav class="navbar navbar-expand-lg w-100 glass-navbar">
+            <div class="container-fluid d-flex justify-content-between align-items-center ">
                 <a class="navbar-brand" href="{% url 'home' %}">     
-                 <div class="brand-container d-flex justify-content-space-between my-1">
-                    <h1 class="brand-name m-0">
-                        <span class="brand-create">Create</span>
-                        <span class="brand-nova">Nova</span>
-                    </h1>
-                </div>
-             </a> 
+                    <div class="brand-container d-flex justify-content-space-between my-1">
+                        <h1 class="brand-name m-0">
+                            <span class="brand-create">Create</span>
+                            <span class="brand-nova">Nova</span>
+                        </h1>
+                    </div>
+                </a> 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon text-light"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link text-light " aria-current="page" href="{% url 'home' %}">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" href="{% url 'business_services' %}">Business Services</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" href="{% url 'creator_services' %}">Creator Services</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" href="{% url 'portfolios' %}">Portfolio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light " href="{% url 'user_list' %}">User Management</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light " href="{% url 'gallery' %}">Gallery</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light " href="{% url 'contact' %}">Contact</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light " href="{% url 'testimonials' %}">Testimonials</a>
-                        </li>
+                <!-- Home Link (Visible to all) -->
+                <li class="nav-item {% if request.resolver_match.url_name == 'home' %}active{% endif %}">
+                    <a class="nav-link {% if request.resolver_match.url_name != 'home' %}text-light{% endif %}" href="{% url 'home' %}">Home</a>
+                </li>
 
-                        {% if user.is_authenticated %}
-                        <li class="nav-item">
-                            <a class="nav-link text-light" href="{% url 'logout' %}">Logout</a>
+                <!-- Business Services (Visible to non-logged in users and staff) -->
+                {% if not user.is_authenticated or is_staff_member  %}
+                    <li class="nav-item {% if request.resolver_match.url_name == 'business_services' %}active{% endif %}">
+                        <a class="nav-link {% if request.resolver_match.url_name != 'business_services' %}text-light{% endif %}" href="{% url 'business_services' %}">Business Services</a>
+                    </li>
+                {% endif %}
+
+                <!-- Creator Services (Visible to all) -->
+                <li class="nav-item {% if request.resolver_match.url_name == 'creator_services' %}active{% endif %}">
+                    <a class="nav-link {% if request.resolver_match.url_name != 'creator_services' %}text-light{% endif %}" href="{% url 'creator_services' %}">Creator Services</a>
+                </li>
+
+                <!-- Gallery (Visible to all) -->
+                <li class="nav-item {% if request.resolver_match.url_name == 'gallery' %}active{% endif %}">
+                    <a class="nav-link {% if request.resolver_match.url_name != 'gallery' %}text-light{% endif %}" href="{% url 'gallery' %}">Gallery</a>
+                </li>
+
+                <!-- Contact (Visible to all) -->
+                <li class="nav-item {% if request.resolver_match.url_name == 'contact' %}active{% endif %}">
+                    <a class="nav-link {% if request.resolver_match.url_name != 'contact' %}text-light{% endif %}" href="{% url 'contact' %}">Contact</a>
+                </li>
+
+                <!-- Testimonials (Visible to all) -->
+                <li class="nav-item {% if request.resolver_match.url_name == 'testimonials' %}active{% endif %}">
+                    <a class="nav-link {% if request.resolver_match.url_name != 'testimonials' %}text-light{% endif %}" href="{% url 'testimonials' %}">Testimonials</a>
+                </li>
+
+                <!-- Conditional Links for Authentication -->
+                {% if user.is_authenticated %}
+                    <!-- User Management (Visible to staff) -->
+                    {% if is_staff_member %}
+                        <li class="nav-item {% if request.resolver_match.url_name == 'user_list' %}active{% endif %}">
+                            <a class="nav-link {% if request.resolver_match.url_name != 'user_list' %}text-light{% endif %}" href="{% url 'user_list' %}">User Management</a>
                         </li>
-                    {% else %}
-                        <li class="nav-item">
-                            <a class="nav-link text-light" href="{% url 'login' %}">Login</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light " href="{% url 'register_content_creator' %}">Sign Up  Creator</a>
-                        </li>
-                                                <li class="nav-item">
-                            <a class="nav-link text-light " href="{% url 'register_staff' %}">Sign Up Staff</a>
-                        </li>
-                        <!-- Add other non-authenticated user links here -->
                     {% endif %}
-                    </ul>
-                </div>
-            </div>
+                    <li class="nav-item">
+                        <a class="nav-link text-light" href="{% url 'logout' %}">Logout</a>
+                    </li>
+                {% else %}
+                    <li class="nav-item {% if request.resolver_match.url_name == 'login' %}active{% endif %}">
+                        <a class="nav-link {% if request.resolver_match.url_name != 'login' %}text-light{% endif %}" href="{% url 'login' %}">Login</a>
+                    </li>
+                    <li class="nav-item {% if request.resolver_match.url_name == 'register_content_creator' %}active{% endif %}">
+                        <a class="nav-link {% if request.resolver_match.url_name != 'register_content_creator' %}text-light{% endif %}" href="{% url 'register_content_creator' %}">Sign Up Creator</a>
+                    </li>
+                    <li class="nav-item {% if request.resolver_match.url_name == 'register_staff' %}active{% endif %}">
+                        <a class="nav-link {% if request.resolver_match.url_name != 'register_staff' %}text-light{% endif %}" href="{% url 'register_staff' %}">Sign Up Staff</a>
+                    </li>
+                {% endif %}
+            </ul>
         </nav>
     </header>
     {% endblock %}
-
             {% block content %}
             <!-- Main content will be here -->
             {% endblock %}
